Actualizar proyecto con últimos cambios y nuevas imágenes

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -10,6 +10,37 @@
     <h1>Título</h1>
     <h2>Subtítulo</h2>
 
+    <table class="table"></table>
+      <thead>
+        <tr>
+          <th>Columna 1</th>
+          <th>Columna 2</th>
+        </tr>
+      </thead>
+     </table>
+a
+     <form action="" class="mt-5">
+       <div class="mb-3 mt-3">
+         <label for="">Correo electrónico</label>
+         <input type="email" name="" id="">
+       </div>
+     </form>
+
+     <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle"
+      type="button" data-bs-toggle="dropdown"
+      aria-expanded="false">
+          dropdown button 
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Action</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+      </ul>
+     </div>
+
+
+
 
     <h1>Hello, world!</h1>
 
