--- a/index.html
+++ b/index.html
@@ -1,50 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyecto Pet Shop</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0 z-3">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Proyecto Pet Shop</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style/style.css" />
+</head>
+<body>
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0 z-3">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">
-      <img class="logotipo" src="images/logo.webp" alt="Logotipo Pet Shop" />
+    <a class="navbar-brand" href="#">
+      <img class="logotipo" src="images/logo.webp" alt="Logotipo Pet Shop" style="width: 120px; height: auto;" />
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./pages/Gatos.html" >gatos </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Perros</a>
-           <li class="nav-item">
-          <a class="nav-link" href="#">Farmacia</a>
-            <li class="nav-item">
-          <a class="nav-link" href="#">Agro</a>
-        </li>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Gatos</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Perros</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Farmacia</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Agro</a></li>
       </ul>
     </div>
   </div>
 </nav>
-    <header class="index-header">
+
+<header class="index-header">
+  <section class="index-header-content">
+    <h1 class="index-h1">¡10% OFF EN TODA LA WEB!</h1>
+    <p class="index-parrafo-header">DEL 15 AL 31 DE JULIO</p>
+    <button class="btn-header">Ver más</button>
+  </section>
+</header>
+
+
       <div class="index-header-flex">
-      </div>
-     
-<section class="index-header-content px-3 h-100 d-flex justify-content-center align-items-center flex-column text-center">
-  <h1 class="index-h1">¡10% OFF EN TODA LA WEB!</h1>
-  <p class="index-parrafo-header">DEL 15 AL 31 DE JULIO</p>
-  <button class="btn-header">Ver más</button>
-</section>
-    </header>
+      </div
 
     <main class="index-main px-3">
       <h2 class="descubri-todos-nuestros-productos-titulo">Descubrí todos nuestros productos</h2>
