Linkeo todas las paginasr

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Proyecto Pet Shop</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="style/style.css" />
+ <meta charset="UTF-8" />
+ <meta name="viewport" content="width=device-width, initial-scale=1" />
+ <title>Proyecto Pet Shop</title>
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" />
+ <link rel="stylesheet" href="style/style.css" />
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0 z-3">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img class="logotipo" src="images/logo.webp" alt="Logotipo Pet Shop" style="width: 120px; height: auto;" />
+      <img class="logotipo" src="images/logo.webp" alt="Logotipo Pet Shop" />
     </a>
     <button
       class="navbar-toggler"
@@ -28,116 +29,141 @@
     <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Gatos</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Perros</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Farmacia</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Agro</a></li>
+        <li class="nav-item"><a class="nav-link" href="pages/gatos.html">Gatos</a></li>
+        <li class="nav-item"><a class="nav-link" href="pages/perros.html">Perros</a></li>
+        <li class="nav-item"><a class="nav-link" href="pages/farmacia.html">Farmacia</a></li>
+        <li class="nav-item"><a class="nav-link" href="pages/agro.html">Agro</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
+
+
+
+
 <header class="index-header">
-  <section class="index-header-content">
-    <h1 class="index-h1">¡10% OFF EN TODA LA WEB!</h1>
-    <p class="index-parrafo-header">DEL 15 AL 31 DE JULIO</p>
-    <button class="btn-header">Ver más</button>
-  </section>
+ <section class="index-header-content">
+<h1 class="fw-semibold fs-3">¡10% OFF EN TODA LA WEB!</h1>
+   <p class="index-parrafo-header">DEL 15 AL 31 DE JULIO</p>
+   <button class="btn-header">Ver más</button>
+ </section>
 </header>
 
 
-      <div class="index-header-flex">
-      </div
-
-    <main class="index-main px-3">
-      <h2 class="descubri-todos-nuestros-productos-titulo">Descubrí todos nuestros productos</h2>
-      <section class="lo-mas-vendido-container">
-        <div class="card-items">
-          <img src="images/braveryperro.webp" alt="Bravery perro adulto" />
-          <div class="card-items-content">
-            <h3 class="mt-2">Bravery perro adulto 2kg</h3>
-            <p class="card-items-precio"><span>$1990</span> $1790</p>
-            <p class="card-items-descripcion">Alimento perros adultosodas las razas.</p>
-            <button class="card-items-btn">Comprar</button>
-          </div>
-        </div>
-
-        <div class="card-items">
-          <img src="images/gemongato.webp" alt="Gemon gato adulto" />
-          <div class="card-items-content">
-            <h3 class="mt-2">Gemon gato adulto 7kg</h3>
-            <p class="card-items-precio"><span>$2440</span> $2249</p>
-            <p class="card-items-descripcion">Ideal para gatos adultos exigentes.</p>
-            <button class="card-items-btn">Comprar</button>
-          </div>
-        </div>
-
-        <div class="card-items">
-          <img src="images/farmacia.webp" alt="Antiparasitario Perros Simparica" />
-          <div class="card-items-content">
-            <h3 class="mt-2">Antiparasitario Perros Simparica</h3>
-            <p class="card-items-precio"><span>$1115</span> $989</p>
-            <p class="card-items-descripcion">Actúa sobre parásitos externos.</p>
-            <button class="card-items-btn">Comprar</button>
-          </div>
-        </div>
-        <div class="card-items">
-          <img src="images/nyd.webp" alt="N&D Grain Free Adulto" />
-          <div class="card-items-content">
-            <h3 class="mt-2">N&D Grain Free Adulto  4kg</h3>
-            <p class="card-items-precio"><span>$3818</span> $3590</p>
-            <p class="card-items-descripcion">Alimento para perros premium sin granos.</p>
-            <button class="card-items-btn">Comprar</button>
-          </div>
-        </div>
-        <div class="card-items">
-          <img src="images/acana.webp" alt="Acana Cat First Feast" />
-          <div class="card-items-content">
-            <h3 class="mt-2">Acana Cat First Feast 2kg</h3>
-            <p class="card-items-precio"><span>$1752</span> $1619</p>
-            <p class="card-items-descripcion">Alimento protéico para gatos cachorros.</p>
-            <button class="card-items-btn">Comprar</button>
-          </div>
-        </div>
-        <div class="card-items">
-          <img src="images/alfombra.webp" alt="Alfombra para Arena Sanitaria" />
-          <div class="card-items-content">
-            <h3 class="mt-2">Alfombra para Arena Sanitaria</h3>
-            <p class="card-items-precio"><span>$795</span> $699</p>
-            <p class="card-items-descripcion">56x43cm, 100% lavable.</p>
-            <button class="card-items-btn">Comprar</button>
-          </div>
-        </div>
 
 
-      </section>
-    </main>
+     <div class="index-header-flex">
+     </div>
 
-    <footer class="footer p-3">
-      <div class="footer-container-grid">
-        <div class="footer-container-primerhijo">
-          <h4>Sobre nosotros</h4>
-          <p>Somos una tienda especializada en productos para mascotas, tanto alimentos como accesorios e higiene, entre otros.</p>
-        </div>
-        <div class="footer-container-segundohijo">
-          <h4>Medios de pago</h4>
-          <p>Aceptamos tarjetas, transferencias y pagos digitales.</p>
-        </div>
-        <div class="footer-container-tercerhijo">
-          <h4>Contacto</h4>
-          <p>Email: info@petshop.com<br>Tel: 099 123 456<br>Dirección: Talcahuano 3311</p>
-        </div>
-      </div>
-      <div class="footer-container-flex">
-        <p class="footer-derechos py-3 m-0">Todos los derechos reservados</p>
-        <img class="logotipo-footer" src="images/logo.webp" alt="Logotipo Footer" />
-      </div>
-    </footer>
-      <img class="wpplogo position-fixed" src="/images/wpplogo.webp" alt="WhatsApp">
+
+   <main class="index-main px-3">
+     <h2 class="descubri-todos-nuestros-productos-titulo">Descubrí todos nuestros productos</h2>
+     <section class="lo-mas-vendido-container">
+       <div class="card-items">
+         <img src="images/braveryperro.webp" alt="Bravery perro adulto" />
+         <div class="card-items-content">
+           <h3 class="mt-2">Bravery perro adulto 2kg</h3>
+           <p class="card-items-precio"><span>$1990</span> $1790</p>
+           <p class="card-items-descripcion">Alimento perros adultos todas las razas.</p>
+           <button class="card-items-btn">Comprar</button>
+         </div>
+       </div>
+
+
+       <div class="card-items">
+         <img src="images/gemongato.webp" alt="Gemon gato adulto" />
+         <div class="card-items-content">
+           <h3 class="mt-2">Gemon gato adulto 7kg</h3>
+           <p class="card-items-precio"><span>$2440</span> $2249</p>
+           <p class="card-items-descripcion">Ideal para gatos adultos exigentes.</p>
+           <button class="card-items-btn">Comprar</button>
+         </div>
+       </div>
+
+
+       <div class="card-items">
+         <img src="images/farmacia.webp" alt="Antiparasitario Perros Simparica" />
+         <div class="card-items-content">
+           <h3 class="mt-2">Antiparasitario Perros Simparica</h3>
+           <p class="card-items-precio"><span>$1115</span> $989</p>
+           <p class="card-items-descripcion">Actúa sobre parásitos externos.</p>
+           <button class="card-items-btn">Comprar</button>
+         </div>
+       </div>
+       <div class="card-items">
+         <img src="images/nyd.webp" alt="N&D Grain Free Adulto" />
+         <div class="card-items-content">
+           <h3 class="mt-2">N&D Grain Free Adulto  4kg</h3>
+           <p class="card-items-precio"><span>$3818</span> $3590</p>
+           <p class="card-items-descripcion">Alimento para perros premium sin granos.</p>
+           <button class="card-items-btn">Comprar</button>
+         </div>
+       </div>
+       <div class="card-items">
+         <img src="images/acana.webp" alt="Acana Cat First Feast" />
+         <div class="card-items-content">
+           <h3 class="mt-2">Acana Cat First Feast 2kg</h3>
+           <p class="card-items-precio"><span>$1752</span> $1619</p>
+           <p class="card-items-descripcion">Alimento protéico para gatos cachorros.</p>
+           <button class="card-items-btn">Comprar</button>
+         </div>
+       </div>
+       <div class="card-items">
+         <img src="images/alfombra.webp" alt="Alfombra para Arena Sanitaria" />
+         <div class="card-items-content">
+           <h3 class="mt-2">Alfombra para Arena Sanitaria</h3>
+           <p class="card-items-precio"><span>$795</span> $699</p>
+           <p class="card-items-descripcion">56x43cm, 100% lavable.</p>
+           <button class="card-items-btn">Comprar</button>
+         </div>
+       </div>
+
+
+
+
+     </section>
+   </main>
+
+
+   <footer class="footer">
+  <div class="footer-container-grid">
+    <div class="footer-section">
+      <h4>Sobre nosotros</h4>
+      <p>
+        Somos una tienda especializada en productos para mascotas, tanto alimentos como accesorios e higiene, entre otros.
+      </p>
     </div>
-    <img class="wpplogo" src="./images/wpplogo.webp" alt="WhatsApp">
+    <div class="footer-section">
+      <h4>Medios de pago</h4>
+      <p>
+        Aceptamos tarjetas, transferencias y pagos digitales.
+      </p>
+    </div>
+    <div class="footer-section">
+      <h4>Contacto</h4>
+      <p>
+        Email: info@petshop.com<br />
+        Tel: 099 123 456<br />
+        Dirección: Talcahuano 3311
+      </p>
+    </div>
+  </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <div class="footer-bottom">
+    <p class="footer-derechos">Todos los derechos reservados</p>
+    <img class="logotipo-footer" src="./images/logo.webp" alt="Logotipo Footer" />
+  </div>
 
-  </body>
+    
+   </div>
+   <img class="wpplogo" src="/images/wpplogo.webp" alt="WhatsApp">
+
+   </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+
+</footer>
+
+ </body>
 </html>
+
