--- a/pages/agro.html
+++ b/pages/agro.html
@@ -1,11 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Agro - Pet Shop</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-    
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0 z-3">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="../index.html">
+      <img class="logotipo" src="../images/logo.webp" alt="Logotipo Pet Shop" />
+    </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="gatos.html">Gatos</a></li>
+        <li class="nav-item"><a class="nav-link" href="perros.html">Perros</a></li>
+        <li class="nav-item"><a class="nav-link" href="farmacia.html">Farmacia</a></li>
+        <li class="nav-item"><a class="nav-link active" href="#">Agro</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<header class="gatos-header">
+  <section class="gatos-header-content">
+    <h1 class="fw-semibold fs-3">Agro</h1>
+    <p class="gatos-parrafo-header">Productos para el campo y mascotas</p>
+    <button class="gatos-btn-header">Ver más</button>
+  </section>
+</header>
+
+<div class="gatos-header-flex"></div>
+
+<main class="index-main px-3">
+  <h2 class="descubri-todos-nuestros-productos-titulo">Lo mejor para el agro</h2>
+  <section class="lo-mas-vendido-container">
+
+    <div class="card-items">
+      <img src="../images/semillas.webp" alt="Semillas" />
+      <div class="card-items-content">
+        <h3 class="mt-2">Semillas de pasto</h3>
+        <p class="card-items-precio"><span>$1200</span> $999</p>
+        <p class="card-items-descripcion">Semillas para siembra de pasto en campo y jardín.</p>
+        <button class="card-items-btn">Comprar</button>
+      </div>
+    </div>
+
+    <div class="card-items">
+      <img src="../images/fertilizante.webp" alt="Fertilizante" />
+      <div class="card-items-content">
+        <h3 class="mt-2">Fertilizante orgánico</h3>
+        <p class="card-items-precio"><span>$1500</span> $1350</p>
+        <p class="card-items-descripcion">Fertilizante natural para cultivo saludable.</p>
+        <button class="card-items-btn">Comprar</button>
+      </div>
+    </div>
+
+  </section>
+</main>
+
+<footer class="footer">
+  <div class="footer-container-grid">
+    <div class="footer-section">
+      <h4>Sobre nosotros</h4>
+      <p>Somos una tienda especializada en productos para mascotas.</p>
+    </div>
+    <div class="footer-section">
+      <h4>Medios de pago</h4>
+      <p>Aceptamos tarjetas, transferencias y pagos digitales.</p>
+    </div>
+    <div class="footer-section">
+      <h4>Contacto</h4>
+      <p>Email: info@petshop.com<br />Tel: 099 123 456<br />Dirección: Talcahuano 3311</p>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p class="footer-derechos">Todos los derechos reservados</p>
+    <img class="logotipo-footer" src="../images/logo.webp" alt="Logotipo Footer" />
+  </div>
+
+  <img class="wpplogo" src="../images/wpplogo.webp" alt="WhatsApp" />
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
